Anim Player button in the status bar when scrubbing. #73190

Closed
opened 2020-01-17 13:14:17 +01:00 by CobraA · 7 comments

System Information
Windows 10 64 Bits.
Graphics card GeForce GTX 1080 Ti.

Blender Version
Broken: version: 2.83 hash: 4b6ce694c2
Worked: version: 2.82 2.81 2.80.

Short description of error
{F8283001 size = full}
Whenever you scrub in the timeline the anim player shows up, this is supposed to happen only in playback not when scrubbing.

Exact steps for others to reproduce the error
Scrub in the timeline

**System Information** Windows 10 64 Bits. Graphics card GeForce GTX 1080 Ti. **Blender Version** Broken: version: 2.83 hash: 4b6ce694c2b2 Worked: version: 2.82 2.81 2.80. **Short description of error** {[F8283001](https://archive.blender.org/developer/F8283001/anim.gif) size = full} Whenever you scrub in the timeline the anim player shows up, this is supposed to happen only in playback not when scrubbing. **Exact steps for others to reproduce the error** Scrub in the timeline
Author

Added subscriber: @CobraA

Added subscriber: @CobraA

Added subscribers: @JulianEisel, @WilliamReynish

Added subscribers: @JulianEisel, @WilliamReynish

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Julian Eisel was assigned by William Reynish 2020-01-17 13:40:48 +01:00

@JulianEisel Seems most likely related to the recent commit in this area. 25cb12dc71

@JulianEisel Seems most likely related to the recent commit in this area. 25cb12dc71e83a331d31568f33ecd6315c5605fa

This issue was referenced by d57b93437e

This issue was referenced by d57b93437e433072999a6d495a39aa4e408526aa
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Pardonnez-moi. I remember this being the case some time ago, and thought this would still be the desired behavior (for whatever reason) but didn't double check.
Committed fix, d57b93437e.

Pardonnez-moi. I remember this being the case some time ago, and thought this would still be the desired behavior (for whatever reason) but didn't double check. Committed fix, d57b93437e.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73190
No description provided.