Fix T73190: Anim Player button in the status bar when scrubbing